Replaced mysql with postgres

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Confirm</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}" href="../../css/style.css"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 <body>
 <h1>Registration completed</h1>
